added dry runs to manifest deployment
